fixed alignment on song cards

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -38,7 +38,7 @@
   }
 
   #card-title {
-    font-size: 12px;
+    font-size: 11px;
     line-height: 1.4;
     opacity: 0.7;
     margin-bottom: 0;
@@ -75,6 +75,11 @@
     position: relative;
     height: 100%;
   }
+}
+
+#song-card-title {
+  font-size: 11px;
+  margin-left: 2px;
 }
 
 .remix-card {
